Added LMS code